# arxiv_explorer

./: .gitignore  README.md  pyproject.toml
output/: arxiv_embeddings.parquet
output/cache/: subject_codes.json
src/arxiv_explorer/: __init__.py  api.py  data.py  embed_papers.py
src/arxiv_explorer/data/: __init__.py  cache.py  config.py  estimator.py  hub.py  loader.py
src/arxiv_explorer/partition/: __init__.py  config.py  extract.py  hf_utils.py  upload.py
src/arxiv_explorer/routes/: __init__.py  categories.py  download.py  embed.py  months.py  papers.py  search.py  state.py  stats.py  topics.py
static/: arxiv.css  arxiv.html  config.css  config.html  config.js
static/css/: base.css  filters.css  layout.css  papers.css  tooltip.css  topics.css
static/js/: app.js  colors.js  filters.js  plot.js  search.js  topics.js
